# pay_system

./: .gitignore
pay_system/: config.py  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
pay_system/app/: app_services.py  models.py  views.py
pay_system/app/migrations/: 0001_initial.py
pay_system/app/templates/: item.html
pay_system/pay_system/: asgi.py  settings.py  urls.py  wsgi.py
pay_system/static/css/: style.css
pay_system/tests/: test_views.py
